--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <meta name="description" content="A web based voxel art program." />
     <meta name="keywords" content="Voxels, Edit, Art, Threejs" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
